* 2.9.1-svn-3
 * Added generics to WikiPlugin.execute( WikiContext, Map< String, String > ) 
 and propagated the change to all plugins. Cfr. with UPGRADING document for details.

git-svn-id: https://svn.apache.org/repos/asf/incubator/jspwiki/trunk@1418094 13f79535-47bb-0310-9956-ffa450edef68